<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/octocat_dash"
        android:title="@string/news_feed" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_pull_request"
        android:icon="@drawable/pull_request_icon"
        android:title="@string/pull_request" />

    <item
        android:id="@+id/navigation_Issues"
        android:icon="@drawable/pull_request_icon"
        android:title="@string/pull_requests" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/profile" />
</menu>