<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_back"
        android:icon="@drawable/back_icon"
        android:title="@string/back" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_notification"
        android:title="@string/notifications"
        android:icon="@drawable/notifications"
        />
    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/market_place" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/explore" />


</menu>